--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
-    "@types/animejs": "^3.1.7",
     "animejs": "^3.2.1",
     "axios": "^1.3.4",
     "axios-cache-interceptor": "^1.0.1",
@@ -23,6 +22,9 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.7",
+    "@types/dompurify": "^3.0.1",
+    "@types/marked": "^4.0.8",
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
