--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "marked": "^4.3.0",
     "roboto-fontface": "*",
     "sass": "^1.60.0",
+    "tsparticles": "^2.9.3",
+    "tsparticles-preset-stars": "^2.9.3",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.38",
+    "vue3-particles": "^2.9.3",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
