--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vueuse/rxjs": "^10.1.2",
     "animejs": "^3.2.1",
-    "axios": "^1.3.4",
     "dompurify": "^3.0.1",
     "marked": "^4.3.0",
     "roboto-fontface": "*",
+    "rxjs": "^7.8.1",
     "sass": "^1.60.0",
     "tsparticles": "^2.9.3",
     "tsparticles-preset-stars": "^2.9.3",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.38",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-particles": "^2.9.3",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
