--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_GH_LINK=https://github.com/Vakme/Vakme/
-VITE_APP_GH_API=https://api.github.com/repos/Vakme/Vakme/
+VITE_APP_GH_LINK=https://github.com/Vakme/Vakme
+VITE_APP_GH_API=https://api.github.com/repos/Vakme/Vakme
