--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@vercel/speed-insights": "^1.2.0",
     "alpinejs": "^3.14.9",
+    "animejs": "^4.2.2",
     "astro": "^5.13.1",
     "astro-icon": "^1.1.5",
     "preact": "^10.26.2",
