--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,31 +1,41 @@
-name: Build And Deploy Portfolio
+name: Deploy to GitHub Pages
 
 on:
+  # Trigger the workflow every time you push to the `main` branch
+  # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
+  workflow_dispatch:
+
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build_vue:
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    name: Build Portfolio
     steps:
-      - uses: actions/checkout@v3
-      - name: Build Portfolio
-        run: |
-          npm ci
-          npm run build
-          cd dist
-          git config --global user.email "${{ env.gitemail }}"
-          git config --global user.name "${{ env.gitname }}"
-          git init
-          git add -A
-          git commit -m '${{ env.gitmsg }}'
-          git push -f https://${{ github.repository_owner }}:${{ env.token }}@github.com/${{ github.repository }}.git master:gh-pages
-        env:
-          token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
-          gitemail: publisher@vakme.github.io
-          gitname: Github Page Publisher [bot]
-          gitmsg: Publishing pages for job ${{ github.workflow }}
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install, build, and upload your site
+        uses: withastro/action@v3
+          # with:
+          # path: . # The root location of your Astro project inside the repository. (optional)
+          # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
+          # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+          # env:
+        # PUBLIC_POKEAPI: 'https://pokeapi.co/api/v2' # Use single quotation marks for the variable value. (optional)
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
